Fix for #1039